musica (2.14) unreleased; urgency=low

  * UNRELEASED

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 04 Jan 2011 21:17:08 -0600

musica (2.13-0ubuntu1) natty; urgency=low

  * index.php:
    - fix popout icon reference
    - rtrim whitespace on stats
  * index.php, jplayer.php:
    - fix download of ogg files (streaming of ogg not working yet)

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 04 Jan 2011 21:17:05 -0600

musica (2.12-0ubuntu1) natty; urgency=low

  * debian/control, debian/dirs, debian/links, debian/rules,
    jplayer/js/Jplayer.as, jplayer/js/jquery.jplayer.min.js,
    jplayer/js/jquery.min.js, jplayer.php, === removed directory
    jplayer/js: use jplayer and jquery from the archive, rather than
    the ones embedded here

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 04 Jan 2011 17:29:56 -0600

musica (2.11-0ubuntu1) natty; urgency=low

  * book_open.png, cd.png, control_play_blue.png, debian/control,
    debian/copyright, debian/install, debian/links, disk.png, group.png,
    index.php, jplayer.php, musica_screenshot.png, music.png, popout.png,
    star_off.png, star_on.png:
    - use the famfamfam-silk package for icons, rather than embedding them
      in this project directly
  * index.php:
    - use icon for help link
    - drop star_off.png

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 14 Dec 2010 11:49:50 -0600

musica (2.10-0ubuntu1) natty; urgency=low

  * index.php: speed up album reads a bit by saving an opendir() call
    and corresponding directory scan

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 08 Dec 2010 00:12:54 -0600

musica (2.9-0ubuntu1) natty; urgency=low

  * index.php: support album art images in the directory with music; supports
    anything we can detect as an image;  if there's more than one, rotate through
    them in a slideshow; LP: #681031
  * support more than one level in the music tree, LP: #293822, LP: #640821

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 24 Nov 2010 12:29:04 -0600
